--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
  	<div id="global"> <!-- comme sont nom l'indique sert de conteneur global de la pge -->
  	  <div id="corp"> <!-- conteneur pour les block header et div "contenu" -->
  	   <header> <!-- le header contien le titre et la photo -->
- 	    <p><a href="Jul.jpg" target="_blank"><img src="thumbnails/minJul.jpg" alt="Photo de Julien" title="Cliquez pour agrandir" id="tete" /></a></p>
+ 	    <p><a href="Jul1.jpg" target="_blank"><img src="thumbnails/minJul1.jpg" alt="Photo de Julien" title="Cliquez pour agrandir" id="tete" /></a></p>
  	    <div id="titre">
  		 <h1>Bardin Julien</h1>
- 	     <p>En phase de reconversion professionnelle</p>
+ 	     <p>développeur JavaScript FullStack</p>
  	    </div>
  	   </header>
 
@@ -26,7 +26,8 @@
  		  <li><strong>de Septembre 2004 à Aout 2008 - Kart'in Paris Sud</strong><br /> Commissaire de Piste. Chef d'équipe depuis fin 2006 , 5 collaborateurs: formation et suivi de l’équipe, Veiller au bon fonctionnement des équipements, expliquer la manipulation des karts et conseiller la clientèle, assurer la sécurité et le respect des règles sur la piste.</li>
  		  <li><strong>de Novembre 2003 à Mars 2004 - La Poste Orly cpa</strong><br /> agent acc13, tri de colis internationaux.</li>
  		  <li><strong>de Mai à juillet 2003 - QUICK</strong><br />
- 		  Equipier caisse et grille en restauration rapide.</li>	
+       Equipier caisse et grille en restauration rapide.</li>
+       <li><strong>de Octobre 2002 à Avril 2003 - Armée de Terre</strong><br /> 13éme Régiment de Dragon Parachutiste, équipier de recherche aéroportée.</li>	
  		  <li><strong>Aout 2000 2001 et 2002 - DIGIPLUG</strong><br />
  		  Assistant Web master, mise à jour de la base de donnée (site Internet).</li>
  		  <li><strong>Juillet Aout 1998 - PEP</strong><br />
