--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  	<div id="global"> <!-- comme sont nom l'indique sert de conteneur global de la pge -->
  	  <div id="corp"> <!-- conteneur pour les block header et div "contenu" -->
  	   <header> <!-- le header contien le titre et la photo -->
- 	    <p><a href="Jul1.jpg" target="_blank"><img src="thumbnails/minJul1.jpg" alt="Photo de Julien" title="Cliquez pour agrandir" id="tete" /></a></p>
+ 	    <p><a href="Jul1.jpg" target="_blank"><img src="thumbnails/miniJul1.jpg" alt="Photo de Julien" title="Cliquez pour agrandir" id="tete" /></a></p>
  	    <div id="titre">
  		 <h1>Bardin Julien</h1>
  	     <p>développeur JavaScript FullStack</p>
